--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         <br>
         <br>
         <br>
-    <marquee id="marqeeStyle" onmouseover="this.stop()," onmouseout="this.start()," style="background-color: gold;,
-color: purple;,">
+    <marquee id="marqeeStyle" onmouseover="this.stop();" onmouseout="this.start();" style="background-color: gold; 
+color: white; height: auto; font-size: 100px; ">
         ***Term 1 exams for secondary grades is over***
         </marquee>
     </div>
